# healthcare-multi-agent-rag-system

./: .env.example  .gitignore  DEPLOYMENT.md  LANGSMITH_SETUP.md  README.md  VECTORIZE-RAG-TESTING.md  VERCEL_DEPLOYMENT.md  package.json  pnpm-lock.yaml  requirements-vercel.txt  requirements.txt  test-vectorize-rag.js  vercel.json
agent-python-backend/: .env.example  main.py  main.py.backup  pyproject.toml
api/: geocode.py  health.py  healthcare-chat.py  python.py
api/hospitals/: locations.py
api/weather/: current.py
app/: layout.tsx  page.tsx
app/api/geocode/: route.ts
app/api/hospitals/locations/: route.ts
app/api/multi-agent/: route.ts
app/api/weather/: route.ts
app/api/weather/current/: route.ts
app/healthcare/: page.tsx
components/: enhanced-rag-display.tsx  healthcare-chat.tsx  hospital-map.tsx
lib/: consts.ts
